removing prelim papers

--- a/papers.html
+++ b/papers.html
@@ -177,12 +177,12 @@
                 <p>Download Past Year Papers and their answer key</p>
             </a>
         </div> -->
-        <div class="card">
+        <!-- <div class="card">
             <a href="Prelim_Papers.html">
                 <h3>Prelim Papers</h3>
                 <p>Download Prelim Papers and their answer key</p>
             </a>
-        </div>
+        </div> -->
         <div class="card">
             <a href="Specimen_Papers.html">
                 <h3>Specimen Papers</h3>
